--- a/src/styles/Item.module.css
+++ b/src/styles/Item.module.css
@@ -16,7 +16,7 @@
 
 .ItemPrice {
   margin-top: 1.5rem;
-  font-family: "Roboto";
+  font-family: "Roboto Variable";
   font-size: 0.9rem;
-  font-weight: bold;
+  font-weight: normal;
 }
