--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -9,7 +9,9 @@
   background-color: white;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
-  position: relative;
+  position: sticky;
+  z-index: 2;
+  top: 0;
 }
 
 .CoverMenu {
@@ -55,4 +57,8 @@
   font-size: 14px;
 
   color: #3e4140;
+}
+
+.LeftMostTitle {
+  padding-left: 0;
 }
